--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
         </div>
     </main>
     <div id="points">Points:</div>
-    <footer>&copy; 2024 Unlimited Anidle Game by Tumurbaatar Tuguldur</footer>
+    <footer>&copy; 2024 Unlimited Anidle</footer>
     <script src="script.js"></script>
 </body>
 </html>
