--- a/index.html
+++ b/index.html
@@ -502,6 +502,17 @@
         </div>
     </main>
     <div id="points">Points:</div>
+    <input type="checkbox" id="rules">
+    <div id="rule">Anidle is wordle like game. The top box shows the found details of the hidden anime. Guess animes to find the hidden title. There will be hints but using will deduct points. <br>
+        <br> Hint 1 is <u>additional</u> Themes: -500 Points 
+        <br> Hint 2 is Synopsis: -3000 Points (it's OP not recommended)
+        <br> Hint 3 is cover Picture: -1500 Points
+        <br> For cheaters: Press F12, go to Console (pls don't) <br>
+        <br> All data was taken from <a href="https://myanimelist.net/" target="_blank"><u>My Anime List</u></a>
+        <svg height="64px" width="64px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 512 512" xml:space="preserve" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path style="fill:#1a1a1d;" d="M488.726,139.637H23.273c-9.883,0-18.689,6.242-21.96,15.569c-3.271,9.326-0.295,19.701,7.422,25.876 l232.733,186.181c4.25,3.399,9.394,5.1,14.538,5.1c5.143,0,10.29-1.7,14.538-5.1l232.72-186.181 c7.719-6.173,10.695-16.55,7.422-25.876C507.415,145.878,498.609,139.637,488.726,139.637z"></path> </g></svg>
+        <svg height="64px" width="64px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 512 512" xml:space="preserve" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path style="fill:#1262b3;" d="M488.726,139.637H23.273c-9.883,0-18.689,6.242-21.96,15.569c-3.271,9.326-0.295,19.701,7.422,25.876 l232.733,186.181c4.25,3.399,9.394,5.1,14.538,5.1c5.143,0,10.29-1.7,14.538-5.1l232.72-186.181 c7.719-6.173,10.695-16.55,7.422-25.876C507.415,145.878,498.609,139.637,488.726,139.637z"></path> </g></svg>
+    </div>
+    <label for="rules">How to Play?</label>
     <footer>&copy; 2024 Unlimited Anidle</footer>
     <script src="script.js"></script>
 </body>
