--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 </head>
 <body>
     <a href="index.html" id="banner">Unlimited Anidle</a>
+    <div id="information">Anidle is a Wordle inspired anime guessing game. Each guess will reveal more clues about the hidden anime. Find the mystery anime in 15 guesses!</div>    
     <main>
         <div class="container">
             <table class="guessbox">
@@ -503,7 +504,7 @@
     </main>
     <div id="points">Points:</div>
     <input type="checkbox" id="rules">
-    <div id="rule">Anidle is wordle like game. The top box shows the found details of the hidden anime. Guess animes to find the hidden title. There will be hints but using will deduct points. <br>
+    <div id="rule">Anidle is a Wordle inspired anime guessing game. Find the mystery anime in 15 guesses using your vast knowledge of anime. The top box shows the found details of the hidden anime. Guess anime to find the hidden title. There will be hints, however using them will deduct points. <br>
         <br> Hint 1 is <u>additional</u> Themes: -500 Points 
         <br> Hint 2 is Synopsis: -3000 Points (it's OP not recommended)
         <br> Hint 3 is cover Picture: -1500 Points
